force-app/main/default/objects/Booking_Verification_Checklist_Item__c/Booking_Verification_Checklist_Item__c.object-meta.xml
<CustomObject>
    <description>Represents an individual verification check within a Booking Verification Checklist. Generated from Booking_Verification_Checklist_Config__mdt records matching the deal Business Unit and Deal Type.</description>
    <label>Booking Verification Checklist Item</label>
    <nameField>
        <displayFormat>BVCI-{0000}</displayFormat>
        <label>Booking Verification Checklist Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Booking Verification Checklist Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>