force-app/main/default/objects/Booking_Verification_Checklist_Item__c/fields/Booking_Verification_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Booking_Verification_Checklist__c</fullName>
    <description>Master-Detail relationship to the parent Booking Verification Checklist.</description>
    <label>Booking Verification Checklist</label>
    <referenceTo>Booking_Verification_Checklist__c</referenceTo>
    <relationshipLabel>Booking Verification Checklist Items</relationshipLabel>
    <relationshipName>Booking_Verification_Checklist_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>