force-app/main/default/objects/Booking_Verification_Checklist_Item__c/fields/Checklist_Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Item_Name__c</fullName>
    <description>Display name of the checklist item, sourced from the matching Booking_Verification_Checklist_Config__mdt record.</description>
    <label>Checklist Item Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>