force-app/main/default/objects/Booking_Verification_Checklist_Item__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Supporting notes or information captured by the user when completing or marking an item as Not Applicable.</description>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>