force-app/main/default/objects/Booking_Verification_Checklist_Item__c/fields/Completed_By__c.field-meta.xml
<CustomField>
    <fullName>Completed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the User who marked this checklist item as Complete or Not Applicable.</description>
    <label>Completed By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Booking Verification Checklist Items</relationshipLabel>
    <relationshipName>Completed_BV_Checklist_Items</relationshipName>
    <type>Lookup</type>
</CustomField>