force-app/main/default/objects/Booking_Verification_Checklist_Item__c/fields/Is_Mandatory__c.field-meta.xml
<CustomField>
    <fullName>Is_Mandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this item must be completed before the booking can be finalized.</description>
    <label>Mandatory</label>
    <type>Checkbox</type>
</CustomField>