force-app/main/default/objects/Booking_Verification_Checklist_Item__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Booking Verification Checklist Items</relationshipLabel>
    <relationshipName>Booking_Verification_Checklist_Items</relationshipName>
    <type>Lookup</type>
</CustomField>