force-app/main/default/objects/Booking_Verification_Checklist_Item__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <description>Required when Status = Rejected. BV team must provide reason for rejection.</description>
    <label>Rejection Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>