force-app/main/default/objects/Booking_Verification_Checklist_Item__c/fields/Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>Sequence_Number__c</fullName>
    <description>Display order of the checklist item within the checklist.</description>
    <label>Sequence Number</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>