force-app/main/default/objects/Booking_Verification_Checklist_Item__c/fields/System_Validated__c.field-meta.xml
<CustomField>
    <fullName>System_Validated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Auto-checked by system automation when item is approved via document upload. Unchecked = manually actioned.</description>
    <label>System Validated</label>
    <type>Checkbox</type>
</CustomField>