force-app/main/default/objects/Booking_Verification_Checklist_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Booking_Verification_Checklist__c</columns>
    <columns>Checklist_Item_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Is_Mandatory__c</columns>
    <columns>Sequence_Number__c</columns>
    <columns>Completed_By__c</columns>
    <columns>Completed_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>